# react-native-image-processing

./: CONTRIBUTING.md  ImageProcessing.podspec  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: JsiInstaller.cpp
android/src/main/java/com/imageprocessing/: ImageProcessingModule.kt  ImageProcessingPackage.kt
android/src/main/java/com/imageprocessing/config/: ImageProcessingConfig.kt
android/src/main/java/com/imageprocessing/model/: PreprocessConfig.kt  RGBValues.kt
android/src/main/java/com/imageprocessing/utils/: BitmapUtils.kt  ImageProcessUtils.kt
cpp/: Bridge.h  FloatBuffer.h  RawBuffer.h  react-native-image-processing.cpp  react-native-image-processing.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/imageprocessing/example/: MainActivity.kt  (+1 more)
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ImageProcessingExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ImageProcessingExample.xcodeproj/: project.pbxproj
example/ios/ImageProcessingExample.xcodeproj/xcshareddata/xcschemes/: ImageProcessingExample.xcscheme
example/ios/ImageProcessingExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: BitmapUtils.h  BitmapUtils.mm  Config.h  Config.mm  ImageProcessing.h  ImageProcessing.mm  Utils.h  Utils.mm
src/: NativeImageProcessing.ts  index.tsx  types.d.ts  utils.ts
